--- a/src/data/blog/template/tamplate2.mdx
+++ b/src/data/blog/template/tamplate2.mdx
@@ -2,8 +2,8 @@
 author: McDeputy
 pubDatetime: 2022-09-23T15:22:00Z
 modDatetime: 2025-06-13T16:52:45.934Z
-title: My template post
-slug: my-template-post
+title: My template post2
+slug: my-template-post2
 featured: false
 draft: false
 tags:
@@ -126,7 +126,6 @@ Write `Table of contents` in h2 format (## in markdown) and place it where you w
 
 For instance, if you want to place your table of contents just under the intro paragraph (like I usually do), you can do that in the following way.
 
-<!-- prettier-ignore-start -->
 ```md
 ---
 # frontmatter
@@ -139,7 +138,6 @@ Here are some recommendations, tips & ticks for creating new posts in AstroPaper
 
 <!-- the rest of the post -->
 ```
-<!-- prettier-ignore-end -->
 
 ## Headings
 
